Fixes 6.1 spacing issues

--- a/wp-content/themes/base/assets/scss/_typography.scss
+++ b/wp-content/themes/base/assets/scss/_typography.scss
@@ -1,6 +1,10 @@
 //
 // Primary Type Styles
 // --------------------------------------------------
+body .is-layout-flow > * + p,
+body .is-layout-flow > p {
+	margin-bottom: 2em;
+}
 p {
 	margin: 0 0 2em 0;
 	&.is-style-no-margin {
